tests/positive/basic/bool_string_roundtrip/input.ci
void main() {
    print(toString(toString(true) == "true") + "\n");
    print(toString(toString(false) == "false") + "\n");
}
