tests/negative/semantic/wrong_arg_count_glyphat/input.ci
void main() {
    print(toString(glyphAt("a")) + "\n");
}
